# clement

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  doxygen.conf.in  llvm_build.sh  run_clang-format.sh
examples/: CMakeLists.txt
examples/basic_server/: CMakeLists.txt  basic_server.cpp  handler.hpp
include/PROJECT_C/: PROJECT_C.hpp  constants.hpp  logger.hpp  mime_types.hpp  path.hpp  request_parser.hpp  response_builder.hpp  response_writer.hpp  route.hpp  router.hpp  server.hpp  utility.hpp  writer.hpp
include/PROJECT_C/utility/: base64.hpp  form_urlencoded.hpp  generate_string.hpp  url_utility.hpp
include/clement/: clement.hpp  http_server.hpp  logger.hpp  mime_types.hpp  path.hpp  request.hpp  response_builder.hpp  route.hpp  router.hpp  utility.hpp  writer.hpp
include/clement/core/: constants.hpp  http_server.hpp  logger.hpp  path.hpp  request.hpp  response_builder.hpp  route.hpp  router.hpp  utility.hpp  writer.hpp
include/clement/utility/: base64.hpp  form_urlencoded.hpp  generate_string.hpp  url_utility.hpp
include/server/: constants.hpp  http_server.hpp  logger.hpp  path.hpp  request.hpp  request_parser.hpp  response_builder.hpp  route.hpp  router.hpp  server.hpp  writer.hpp
include/server/utility/: base64.hpp  form_urlencoded.hpp  generate_string.hpp  url_utility.hpp
test/: CMakeLists.txt
test/Catch2/: CMakeLists.txt
test/src/: all_PROJECT_C_tests.cpp  all_server_tests.cpp  all_tests.cpp  path_test.hpp  request_test.hpp  test_base64.cpp  test_base64.hpp  test_form_urlencoded.hpp  test_generate_string.hpp  test_logger.hpp  test_path.hpp  test_request.hpp  test_route.hpp  test_router.hpp  test_url_utility.hpp  tests.cpp  unit_tests.cpp  utility_test.hpp  utility_tests.hpp
test/src/core/: http_server_tests.hpp  logger_tests.hpp  path_tests.hpp  request_tests.hpp  route_tests.hpp  router_tests.hpp  test_logger.hpp  test_route.hpp  test_router.hpp  writer_tests.hpp
